--- a/css/index_style.css
+++ b/css/index_style.css
@@ -78,6 +78,16 @@ a:hover {
 
 #zap {
     background-color: #25d366;
+    animation: animate-box 1s infinite alternate;
+}
+
+@keyframes animate-box {
+    0% {
+        transform: scale(1); /* escala normal */
+    }
+    100% {
+        transform: scale(1.1); /* escala aumentada */
+    }
 }
 
 #yt {
@@ -113,8 +123,8 @@ a:hover {
 
 
 @keyframes animation {
-    0%{background-position:0% 47%}
+    0%{background-position:0 47%}
     50%{background-position:100% 54%}
-    100%{background-position:0% 47%}
+    100%{background-position:0 47%}
 }
 
