--- a/css/index_style.css
+++ b/css/index_style.css
@@ -67,6 +67,7 @@ a {
     height: 30px;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
+    margin: 10px;
 }
 
 a:hover {
